--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 InquirerPy~=0.3.4
 jupiter-python-sdk
 pyfiglet
-pandas~=1.5.0rc0
+pandas~=2.0.3
 tabulate~=0.9.0
 yaspin~=3.0.1
 
@@ -10,3 +10,6 @@ httpx~=0.23.3
 solders~=0.20.0
 solana~=0.32.0
 colorama~=0.4.6
+
+requests~=2.31.0
+DateTime~=5.2
